<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="127dp"
        android:text="@string/tishi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sure_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="32dp"
        android:text="@string/sure"
        app:layout_constraintStart_toStartOf="@+id/radioGroup_r"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_r" />

    <RadioGroup
        android:id="@+id/radioGroup_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/lna_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lna" />

        <RadioButton
            android:id="@+id/tba_t"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tba"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="223dp" />

        <RadioButton
            android:id="@+id/fra_f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fra"
            tools:layout_editor_absoluteX="161dp"
            tools:layout_editor_absoluteY="271dp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>